# Pytorch-API-Project

./: .gitignore  Dockerfile  README.md  grader_helper.sh
.github/workflows/: classroom.yml
mlapi/: .gitignore  pyproject.toml  submission-namespace.yaml
mlapi/.k8s/base/: deployment-project.yaml  service-project.yaml
mlapi/.k8s/overlays/prod/: hpa-project.yaml  kustomization.yaml  virtual-service.yaml
mlapi/k8s/base/: deployment-project.yaml  kustomization.yaml
mlapi/k8s/overlays/dev/: kustomization.yaml  namespace.yaml  service-lab4-lb.yaml
mlapi/k8s/overlays/prod/: hpa-project.yaml  kustomization.yaml  virtual-service.yaml
mlapi/src/: sentiment_predict.py
mlapi/tests/: test_mlapi.py
mlapi/trainer/: train.py
